--- a/Index.html
+++ b/Index.html
@@ -128,7 +128,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>bharathiar University  - Mech</p>
+            <p>bharathiar University  - coimbatore</p>
             
             
         </div>
